--- a/src/app/shared/charts/donut-chart/donut-chart.component.scss
+++ b/src/app/shared/charts/donut-chart/donut-chart.component.scss
@@ -36,9 +36,14 @@
 .chart-area {
   position: relative;
   width: 100%;
+  min-height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (min-width: 768px) {
+    min-height: 250px;
+  }
 
   canvas {
     width: 100% !important;
